fix: Sonarqube found problems fixed